# Granite

./: .gitignore  README.md  download_vulkan_headers.sh  meson.build  test.cpp  vulkan.h
loader/: loader.cpp
soft_render_icd/: instance.cpp  meson.build
vulkan/: meson.build  test.cpp  vulkan.h
vulkan/loader/: loader.cpp  meson.build
vulkan/soft_render_icd/: instance.cpp  meson.build
vulkan/soft_render_icd/renderer/: allocations.hpp  buffer.hpp  framebuffer.hpp  image.hpp  operations.hpp  pipeline.hpp
vulkan/soft_render_icd/renderer/rasterizer-test/: core.hpp  meson.build  rasterizer.hpp  test.cpp
vulkan/soft_render_icd/renderer/spirv/: jit.cpp  jit.hpp  main.cpp  meson.build  spirv.hpp  spirv_print.hpp  test.vert
vulkan/soft_render_icd/renderer/spirv/ops/: meta_ops.cpp  meta_ops.hpp  type_ops.cpp  type_ops.hpp
